2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-09-27  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c (cb_check_for_uniqueness) : new.
	(accel_edited_callback) : don't let a user enter duplicate
	  accelerators for different actions.

Fri Nov  1 17:46:06 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-keybinding-properties.c: move to use gnome-theme-info
	instead of theme-common.

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-09-29  Havoc Pennington  <hp@pobox.com>

	* eggaccelerators.c: update from libegg to get fix from Ralph
	Loader for <Super> <Hyper> <Meta> parsing, #93005

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Deepa Natarajan <deepa.natarajan@wipro.com>
 
	* gnome-keybinding-properties.c: Added [un]maximize metacity bindings.
 
2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

Mon Aug 19 17:54:07 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (metacity_key_list): fix bindings
	to match metacity.

2002-08-15  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c : Add a pile of missing metacity
	  bindings.

2002-08-10  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=83334
	* eggcellrendererkeys.c : do it the easy way and just update the
	  libegg code.

2002-08-08  Seth Nickell  <snickell@stanford.edu>

	* gnome-keybinding-properties.glade:

	Set border widths correctly so things align nicely.

2002-06-27  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c (setup_dialog) : fix and move the code
	  into capplet_set_icon.

2002-06-26  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=86575
	* gnome-keybinding-properties.c (setup_dialog) : handle missing
	  pixmaps more smoothly.

2002-06-21  Stephen Browne <stephen.bronwe@sun.com>

	* gnome-keybinding-properties.c : moved metacity detection