@@ -1,3 +1,8 @@
+Thu Nov 14 19:30:02 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* theme-thumbnail.c (setup_theme_thumbnail_factory): add G_IO_HUP
+	so the child can actually exit when the parent does.
+
 Thu Nov 14 17:14:00 2002  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-theme-manager.c: Use new theme system.  Handle other
