@@ -1,3 +1,9 @@
+Thu Nov 14 19:01:39 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-keybinding-properties.c (setup_dialog): there's no need
+	for it to be resizable, as we have GTK_POLICY_NEVER for the
+	hadjustment.
+
 2002-11-02  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.2
